--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,3 @@
 <resources>
-    <string name="app_name" translatable="false">MediaNetwork</string>
-    <string name="hello_media_network">Hello MediaNetwork!</string>
-    <string name="nmedia">рпррпрп</string>
+    <string name="app_name">MediaNetwork</string>
 </resources>
