--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Медиа Сеть</string>
+    <string name="menu_remove">Удалить</string>
+    <string name="menu_edit">Редактировать</string>
+    <string name="post_text">Текст поста</string>
+    <string name="error_empty_content">Содержимое не может быть пустым</string>
+    <string name="edit_message">Оригинальный текст поста</string>
+
 </resources>
